ui/src/styles/components.css
.circle-button {
  @apply inline-flex h-9 w-9 items-center justify-center rounded-lg p-1.5 font-semibold;
}

.button {
  @apply inline-flex cursor-pointer items-center justify-center rounded-lg px-4 py-2 text-base font-semibold tracking-tight;
}

.dialog-container {
  @apply fixed top-1/2 left-1/2 z-40 -translate-x-1/2 -translate-y-1/2 transform p-4;
}

.dialog {
  @apply relative max-h-[calc(100vh-2rem)] min-w-[360px] overflow-auto rounded-3xl bg-white p-5 sm:p-8 md:max-w-[calc(100vw-2rem)];
}

.dialog-inner-container {
  @apply h-full space-y-8 overflow-y-auto p-4 md:p-8;
}

.dropdown {
  @apply min-w-52 rounded-xl p-4;
}

.inner-section {
  @apply rounded-xl bg-white p-8;
}

.input {
  @apply w-full rounded-lg bg-white px-2 py-1.5 text-base leading-5;
}

.notification {
  @apply rounded-xl bg-gray-50 p-4;
}

.spinner {
  @apply inline-flex h-6 w-6 animate-spin items-center;
}

.new-dropdown {
  @apply flex min-w-40 flex-col rounded-lg bg-white py-0 font-semibold shadow-lg dark:border dark:border-gray-50;
}

.new-dropdown-item {
  @apply focus:outline-none cursor-pointer rounded-lg px-2 py-3 ring-gray-200 hover:bg-gray-50;
}

